<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/login"
tools:context=".Fragment.Login.LoginFragment">

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_passwordTip"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/gui4"
        app:layout_constraintEnd_toStartOf="@+id/gui3"
        app:layout_constraintStart_toStartOf="@+id/gui3"
        app:layout_constraintTop_toTopOf="@+id/gui2"
        app:layout_constraintVertical_bias="0.775" />

    <EditText
        android:id="@+id/login_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_mobileTip"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toStartOf="@+id/gui3"
        app:layout_constraintStart_toStartOf="@+id/gui3"
        app:layout_constraintTop_toTopOf="@+id/gui2"
        app:layout_constraintVertical_bias="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gui1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

<androidx.constraintlayout.widget.Barrier
    android:id="@+id/barrier"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gui2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gui3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_loginbtn"
        app:layout_constraintBottom_toTopOf="@+id/gui1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gui5"
        app:layout_constraintVertical_bias="0.657" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gui4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <TextView
        android:id="@+id/login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forget"
        app:layout_constraintBottom_toTopOf="@+id/gui5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gui3"
        app:layout_constraintTop_toTopOf="@+id/gui4" />

    <TextView
        android:id="@+id/login_regedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_regedit"
        app:layout_constraintBottom_toTopOf="@+id/gui5"
        app:layout_constraintEnd_toStartOf="@+id/gui3"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gui4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gui5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>